     when the bug was introduced. A regression test for this was also added. (RT#37908)
  4. Allow "+" as a valid character in file names, which fixes temp file creation on OS X Leopard.  
     Thanks to Andy Armstrong, and alech for patches. (RT#30504) 
  5. Set binmode() on the Netware platform, thanks to Guenter Knauf (RT#27455)

  [DOCUMENTATION]
  1. Several typos were fixed, Thanks to ambs. (RT#41105)
  2. A typo related to the nosticky pragma was fixed, thanks to Britton Kerin. (RT#43220)
  3. examples/nph-clock.cgi is now more portable, by calling localtime() rather than `/bin/date`,
     thanks to Guenter Knauf. (RT#27456).
  4. In CGI::Carp, the SEE ALSO section was cleaned up, thanks to Slaven Rezic. (RT#32769)

  [INTERNALS]  
  1. New t/unescapeHTML.t test script has been added. It includes a TODO test for a pre-existing
     bug which could use a patch. Thanks to Pete Gamache and Mark Stosberg (RT#39122)
  2. New t/user_agent.t test script has been added. Thanks to Mark Stosberg.  
  3. New t/popup_menu.t test script has been added. Thanks to Mark Stosberg. (RT#37908)

  Version 3.44
  1. Patch from Kurt Jaeger to allow HTTP PUT even if the content length is unknown.
  2. Patch from Pavel merdin to fix a problem for one of the FireFox addons.
  3. Fixed issue in mod_perl & fastCGI environment of cookies returned from 
     CGI->cookie() leaking from one session to another.

  Version 3.43
  1. Documentation patch from MARKSTOS@cpan.org to replace all occurrences of
  "new CGI" with CGI->new()" to reflect best perl practices.
  2. Patch from Stepan Kasal to fix utf-8 related problems in perl 5.10

  Version 3.42
  1. Added patch from Renee Baecker that makes it possible to subclass
  CGI::Pretty.
  2. Added patch from Nicholas Clark to allow ~ characters in temporary directories.
  3. Added patch from Renee Baecker that fixes the inappropriate escaping of fields
     in multipart headers.

  Version 3.41